phone: fixed horizontal alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,12 @@ nav a {
   padding: 5px 7.5px;
 }
 
+@media (min-width: 660px) {
+  nav a {
+    margin: 7.5px;
+  }
+}
+
 @media (min-width: 685px) {
   nav a {
     margin: 7.5px;
@@ -227,7 +233,7 @@ nav a {
 
 /* ============================= main-header ============================= */
 
-@media (min-width: 685px) {
+@media (min-width: 660px) {
   .main-header {
     display: flex;
     align-items: end;
@@ -243,6 +249,12 @@ nav a {
   padding: 0 0 15px 0;
   display: flex;
   flex-direction: row;
+}
+
+@media (min-width: 660px) {
+  .navigation {
+    font-size: 0.85em;
+  }
 }
 
 @media (min-width: 685px) {
@@ -266,6 +278,14 @@ nav a {
 
 .profile {
   width: 100%;
+}
+
+@media (min-width: 660px) {
+  .profile {
+    height: 300px;
+    object-fit: cover;
+    object-position: 100% -120px;
+  }
 }
 
 @media (min-width: 768px) {
